force-app/main/default/objects/Error_Handler__b/Error_Handler__b.object-meta.xml
<CustomObject>
    <description>This Object is used to catch the exceptions</description>
    <label>Error Handler</label>
    <pluralLabel>Error Handler</pluralLabel>
</CustomObject>