force-app/main/default/objects/Error_Handler__b/fields/Exception_Mesage__c.field-meta.xml
<CustomField>
    <fullName>Exception_Mesage__c</fullName>
    <label>Exception Mesage</label>
    <length>55</length>
    <type>Text</type>
</CustomField>