force-app/main/default/objects/Error_Handler__b/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>